public/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');

body {
    font-family: "Quicksand", sans-serif;
    font-weight: 500;
}

button {
    font-family: "Quicksand", sans-serif;
    font-weight: 500;
}

.card {
    margin: 5px;
}

/* Overall layout */
#contentContainer {
    display: flex;
    flex-direction: row;
}
#sidebar {
    width: 220px;
    max-width: 33vw;
    height: 100vh;
    overflow-y: auto;
    background-color: #F5B28D;
    z-index: 3;
    position: sticky;
    top: 0;
}
#content {
    width: 100%;
    background-color: #FFFAEE;
}
@media (max-width: 768px) {
    #navbar {
        flex-direction: row;
    }
    .searchWrapper {
        width: 100%;
        margin-right: 0;
        margin-left: 24px;
    }
    #sidebar {
        display: none;
    }
}

/* Styling for sidebar */
.sidebarLogo {
    padding: 16px;

}
.sidebarLogo img {
    width: 100%;
    border-radius: 25px;
}

/* Normal menu item */
.sidebarItem {
    display: flex;
    padding: 16px 0;
    width: 100%;
    justify-content: center;
    font-size: 24px;
    color: #FFFAEE;
    transition: background-color 0.5s ease;
}
.sidebarItem:hover {
    background-color: #F0A073;
    color: #FFFAEE;
}

/* Active menu item */
.isActive {
    background-color: #FFFAEE;
    color: #757575 !important;
}
.isActive:hover {
    background-color: #FFFAEE;
}

/* Styling for Navbar */
#navbar {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    height: 75px;
    background-color: #E26B28;
    z-index: 1;
    padding: 12px 32px;
    align-items: center;
    position: sticky;
    top: 0;
}
.searchWrapper {
    width: 100%;
    margin-right: 24px;
}
.searchBar {
    width: 100%;
}

/* for cards/posts */

#cardHolder .card {
  width: 400px;
  margin: 10px;
  background-color: #ebe1ce !important;
  border-radius: 5px;
  height: fit-content;
}

.left-image {
  width: 200px;;
}

.right-images {
  width: 130px;
  height: 200px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.images {
  display: flex;
  justify-content: space-between;
}

#cardHolder .card img {
  border-radius: 5px;
  object-fit: cover;
  width: 100%;
}

.left-image .image img {
  height: 200px;
}

.right-images .image img {
  height: 90px;
}

.removeMarginB {
  margin-bottom: 0px !important; 
}

#cardHolder {
  width: 100%;
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  position: relative;
  top: 15px;
}

@media (max-width:420px) {
  .right-images {
    display: none;
  }
  
  .left-image {
    width: 100%;
  }
}

#cardHolder button {
    position: relative;
    left: 200px;
}

#statsCardHolder .content {
    display: flex;
    flex-direction: column;
    align-items: center;
}

#statsCardHolder .card {
    background-color: #ebe1ce !important;
    border-radius: 5px;
    width:30%;
}

#statsCardHolder {
    width: 60%;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

#userHeader {
    margin-left: 10%;
    margin-right: 10%;
    margin-top: 5px;
    height: 9.5vw;
}

.pfPic {
    width: 7.5vw;
    height: 7.5vw;
    border-radius: 3.75vw;
    position: relative;
    top: -8.7vw;
    left: 0.5vw;
    position:relative;
}

#pfName {
    position: relative;
    top: -16vw;
    left: 10vw;
}
#pfName p {
    color: #FFFAEE!important;
}

.name {
    font-size: 3vw;
}

.username {
    font-size: 2vw;
}

#editButton {
    width: 3vw;
    height: 3vw;
    border-radius: 1.5vw;
    position: relative;
    top: -18vw;
    left: 5vw;
    position:relative; 
    border: none;
    background: #FFC61E;
border-radius: 50px;
}

.sidebyside {
    display: flex;
    justify-content: space-around;
    width: 100%;
}

#challengesHolder {
    background-color: #F5B28D;
    height: 200px;
    width: 30%;
    justify-content: space-around;
    border-radius: 5px;
    margin: 1em;
    margin-right: 2%;
    margin-left: 2%;
}

#cardHolder .card-big {
  width: 800px;
  margin: 10px;
  background-color: #ebe1ce !important;
  border-radius: 5px;
  height: fit-content;
  
}

.left-image-big {
  width: 400px;
}

.right-images-big {
  width: 330px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

#cardHolder .card-big img {
  border-radius: 5px;
  object-fit: cover;
  width: 100%;
}

.left-image-big .image img {
  height: 400px;
}

.right-images-big .image img {
  height: 180px;
}


@media (max-width:750px) {
  .right-images-big {
    display: none;
  }
  
  .left-image-big {
    width: 100%;
  }
}
/* Modal styling */
.modal-card {
    border-radius: 15px;
}
.modal-card-body {
    background-color: #E26B28!important;
}
.modal-card-foot {
    border: none;
    display: flex;
    flex-direction: row-reverse;
    background-color: #E26B28!important;
}
.modal-card-foot button {
    background-color: #FFDF81!important;
    border-radius: 25px;
    border: none;
    font-family: "Quicksand", sans-serif;
    font-weight: 600;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
}
.modal-card-body label {
    color: #FFFAEE!important;
}

.pfp-div{
    position: relative;
}

#pfp-modal{
  width: 200px;
  height: 200px;
  position: relative;
  object-fit: cover;
  overflow: hidden;
  border-radius: 50%;
  margin-left: auto;
  margin-right: auto;
  display: block;
}
.pfp-info-card{
width: 150px;
  height: 150px;
  position: relative;
  object-fit: cover;
  overflow: hidden;
  border-radius: 50%;
  display: block;
}

#refresh{
    position: absolute;
    bottom:0;
    right:4px;
    color:  #FFFAEE!important;
    font-size: 48px;
      position: absolute;
    margin: 0 auto;
    left: 0;
    right: -100px;
    top: 150px;
    width: 0%;
}

.modal-header{
    text-align: center;
    color:  #FFFAEE!important;
    font-size: 80px;
    font-weight: bold;
}

@media (max-width: 768px) {
    .modal-background {
        display: none;
    }
    .modal-card {
        position: absolute;
        top: 70px;
        border-radius: 0;
        width: 100vw;
        max-height: calc(100vh - 70px);
        margin: 0;
    }
}

.createInput {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.createInput .field {
    width: 60%;
}

.createInput .control button {
    background-color: #E26B28;
    color: white;
}

.center {
    display: flex;
    justify-content: center;
}


/* Food Feed index Hero */
.hero-body .columns {
    background-color: #E26B28!important;
    margin: 0 75px;
    border-radius: 25px;
    padding: 0;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
}
.hero-body .container .columns img {
    padding: 0!important;
    border-radius: 25px 0 0 25px;
    height: 100%;
    border: none;
}
.hero-body .container .columns .column {
    padding: 25px;
}
.hero-body .container .columns .column h1 {
    color: #FFFAEE!important;
}
.hero-body .container .columns .column a {
   background: #FFDF81;
    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
    border-radius: 50px;
    border: none;
}
.hero-body .container .columns .column h2 {
    color: #FFFAEE!important;
}
.modal-card-foot button {
    margin-left: 5px;
}

#personInfo {
    background-color: #ebe1ce;
    border-radius: 5px;
    padding: 15px;
    width: 30vw;
}

#personInfo img {
    height: 100px;
    width: 100px;
    border-radius: 50px;
    object-fit: cover;
}

.split {
    display: flex;
    align-items: center;
}

.split-right {
    margin-left: 5px;
}

.right-panel {
    margin: 15px;
    margin-right: 3%;
    /* need to update with min width */
}

.right-panel button {
    margin: 15px;
}


/* Rotating globe */
.globe {
  border: 2px solid #69C0CD;
  border-radius: 50%;
  height: 140px;
  left: 50%;
  overflow: hidden;
  position: absolute;
  top: 50%;
  transform: translate(-50%, -50%);
  width: 140px;
  
  
}

.globe svg {
    animation: rotation 5s linear 0s infinite;
}

.globe svg path {
    stroke: #8BC34A;
}

@keyframes rotation {
  from {
    transform: translateX(0);
  }
  
  from {
    transform: translateX(-50%);
  }
}

#pfp{
    width:48px;
    height:48px;
    background-size:contain;
    background-position:center;
    border-radius:50%;
}

